validate trim level

--- a/serverless_api/sls-api/templates/index.html
+++ b/serverless_api/sls-api/templates/index.html
@@ -46,6 +46,9 @@
   <div class="result">
    {{ summary_text}}
    <br>
+   <br>
+   {{ trim_text }}
+   <br>
    {{ prediction_text }}
    <br> 
    {{ interval_text }}
